components/platform/data-netpol/overlays/dev/kafka-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-specific-ingress
  namespace: data
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: zylos-kafka
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zylos-services
      ports:
        - protocol: TCP
          port: 9092

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9404
